fix(tabsbar): fix horizontal tabs label alignment
This was a regression from a previous fix for vertical tabs.

Closes #1046.

--- a/theme/parts/tabsbar.css
+++ b/theme/parts/tabsbar.css
@@ -477,6 +477,7 @@ spacer[part=overflow-start-indicator], spacer[part=overflow-end-indicator] {
 
 	#tabbrowser-tabs[orient="horizontal"] & {
 		&:not([pinned]) {
+			margin-inline-start: auto;
 			margin-inline-end: 2px;
 
 			@media -moz-pref("gnomeTheme.tabAlignLeft") {
